attached_assets/Pasted-CMake-Warning-dev-at-nix-store-rxb9zl1mdx9f2n3z0nyv9zhngj3f2pw0-cmake-3-24-3-share-cmake-3-24-Mod-1735328033390.txt
CMake Warning (dev) at /nix/store/rxb9zl1mdx9f2n3z0nyv9zhngj3f2pw0-cmake-3.24.3/share/cmake-3.24/Modules/FetchContent.cmake:1267 (message):
  The DOWNLOAD_EXTRACT_TIMESTAMP option was not given and policy CMP0135 is
  not set.  The policy's OLD behavior will be used.  When using a URL
  download, the timestamps of extracted files should preferably be that of
  the time of extraction, otherwise code that depends on the extracted
  contents might not be rebuilt if the URL changes.  The OLD behavior
  preserves the timestamps from the archive instead, but this is usually not
  what you want.  Update your project to the NEW behavior or specify the
  DOWNLOAD_EXTRACT_TIMESTAMP option with a value of true to avoid this
  robustness issue.
Call Stack (most recent call first):
  CMakeLists.txt:23 (FetchContent_Declare)
This warning is for project developers.  Use -Wno-dev to suppress it.

-- Could NOT find Python3 (missing: Python3_EXECUTABLE Interpreter) 
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- Configuring done
-- Generating done
-- Build files have been written to: /home/runner/LockerDeliverySystem/build
Consolidate compiler generated dependencies of target amazon_locker
[ 14%] Built target amazon_locker
[ 21%] Building CXX object _deps/googletest-build/googletest/CMakeFiles/gtest.dir/src/gtest-all.cc.o
[ 28%] Linking CXX static library ../../../lib/libgtest.a
[ 28%] Built target gtest
[ 35%] Building CXX object _deps/googletest-build/googletest/CMakeFiles/gtest_main.dir/src/gtest_main.cc.o
[ 42%] Linking CXX static library ../../../lib/libgtest_main.a
[ 42%] Built target gtest_main
[ 50%] Building CXX object CMakeFiles/amazon_locker_test.dir/tests/locker_test.cpp.o
In file included from /home/runner/LockerDeliverySystem/build/_deps/googletest-src/googletest/include/gtest/gtest-printers.h:122,
                 from /home/runner/LockerDeliverySystem/build/_deps/googletest-src/googletest/include/gtest/gtest-matchers.h:49,
                 from /home/runner/LockerDeliverySystem/build/_deps/googletest-src/googletest/include/gtest/internal/gtest-death-test-internal.h:47,
                 from /home/runner/LockerDeliverySystem/build/_deps/googletest-src/googletest/include/gtest/gtest-death-test.h:43,
                 from /home/runner/LockerDeliverySystem/build/_deps/googletest-src/googletest/include/gtest/gtest.h:65,
                 from /home/runner/LockerDeliverySystem/tests/locker_test.cpp:2:
/home/runner/LockerDeliverySystem/tests/locker_test.cpp: In member function ‘virtual void LockerTest_CreationTest_Test::TestBody()’:
/home/runner/LockerDeliverySystem/tests/locker_test.cpp:11:24: error: ‘class Locker’ has no member named ‘isAvailable’
   11 |     EXPECT_TRUE(locker.isAvailable());
      |                        ^~~~~~~~~~~
/home/runner/LockerDeliverySystem/tests/locker_test.cpp: In member function ‘virtual void LockerTest_PackageOperations_Test::TestBody()’:
/home/runner/LockerDeliverySystem/tests/locker_test.cpp:19:25: error: ‘class Locker’ has no member named ‘isAvailable’
   19 |     EXPECT_FALSE(locker.isAvailable());
      |                         ^~~~~~~~~~~
/home/runner/LockerDeliverySystem/tests/locker_test.cpp:23:24: error: ‘class Locker’ has no member named ‘isAvailable’
   23 |     EXPECT_TRUE(locker.isAvailable());
      |                        ^~~~~~~~~~~
make[2]: *** [CMakeFiles/amazon_locker_test.dir/build.make:76: CMakeFiles/amazon_locker_test.dir/tests/locker_test.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:165: CMakeFiles/amazon_locker_test.dir/all] Error 2
make: *** [Makefile:146: all] Error 2